<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_preferences"
          android:title="@string/preferences"
          android:orderInCategory="100"
          android:showAsAction="never"/>
    <item android:id="@+id/menu_logout"
          android:title="@string/logout"
          android:orderInCategory="100"
          android:showAsAction="never"/>
    <item android:id="@+id/menu_search"
          android:icon="@drawable/action_search"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_refresh"
          android:title="@string/refresh"
          android:icon="@drawable/navigation_refresh"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_about"
          android:title="@string/about"
          android:orderInCategory="100"
          android:showAsAction="never"/>
</menu>
