<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/scrollView"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TableLayout
				android:id="@+id/tableLayout"
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" >

				<TextView
						android:id="@+id/usernameLabel"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="20dp"
						android:text="@string/username"
						android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
						android:id="@+id/usernameBox"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ems="10"
						android:inputType="textNoSuggestions"
						android:text="hansen">
						<requestFocus />
				</EditText>

				<TextView
						android:id="@+id/passwordLabel"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:text="@string/password"
						android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
						android:id="@+id/passwordBox"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:inputType="textPassword"
						android:text="test1234"/>

				<Button
						android:id="@+id/loginButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="5dp"
						android:text="@string/login" />

				<Button
						android:id="@+id/signUpButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/sign_up" />

				<Button
						android:id="@+id/forgotPasswordButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="5dp"
						android:layout_marginBottom="20dp"
						android:text="@string/forgot_password" />
		</TableLayout>

</ScrollView>