<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<Button
				android:id="@+id/button2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_centerVertical="true"
				android:text="@string/username_and_password"/>

		<Button
				android:id="@+id/button1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_above="@+id/button2"
				android:layout_alignRight="@+id/button2"
				android:layout_alignLeft="@+id/button2"
				android:text="@string/google" />

		<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_above="@+id/button1"
				android:layout_centerHorizontal="true"
				android:text="@string/choose_login_method"
				android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
